# cargotodebian

./: .rustfmt.toml  Cargo.toml  README.md  system.md
.github/workflows/: cargo.yml
autoscripts/: postinst-init-tmpfiles  postinst-systemd-dont-enable  postinst-systemd-enable  postinst-systemd-restart  postinst-systemd-restartnostart  postinst-systemd-start  postrm-systemd  postrm-systemd-reload-only  prerm-systemd  prerm-systemd-restart
example/: 3.txt  4.txt  Cargo.toml  build.rs  changelog  main.rs
example/assets/: 1.txt
src/: compress.rs  config.rs  control.rs  data.rs  debarchive.rs  dependencies.rs  dh_installsystemd.rs  dh_lib.rs  error.rs  lib.rs  listener.rs  main.rs  manifest.rs  ok_or.rs  pathbytes.rs  tararchive.rs  util.rs  wordsplit.rs
tests/: command.rs
