[package]
name = "cargotodebian"
license = "MIT"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Cargo to debian. Automaticly creates binary packages from cargo.toml to .deb file"
documentation = "https://docs.iana.io/cargotodebian"
homepage = "https://github.com/ianaio/cargotodebian#readme"
keywords = ["ianaio","debian", "ubuntu", "deploy", "cargo-subcommand"]
repository = "https://github.com/ianaio/cargotodebian"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
maintainer = "Wojciech Cichon <cichyboom@gmail.com>"
copyright = "2023-2033, Jaroslaw Cichon, Wojciech Cichon"
license-file = ["LICENSE", "5"]
extended-description = """\
Cargo to debian. \
Automaticly creates binary packages from cargo.toml to .deb file"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cargotodebian", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargotodebian/README", "644"],
]

[lib]
name = "cargo-todebian"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo_todebian"
path = "src/main.rs"
doc = false

[dependencies]
getopts = "0.2.21"
md5 = "0.7.0"
quick-error = "2.0.1"
xz2 = { version = "0.1.7", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tar = "0.4.38"
toml = "0.7.3"
zopfli = "0.7.2"
glob = "0.3.1"
ar = "0.9.0"
cargo_toml = "0.15.2"
rayon = "1.7.0"
regex = { version = "1.8.1", default-features = false, features = ["std"] }
itertools = "0.10.5"
num_cpus = { version = "1.15.0", optional = true }
tempfile = "3.5.0"

[features]
default = ["lzma"]
lzma = ["xz2", "num_cpus"]

[profile.dev]
debug = 1

[profile.release]
lto = true
opt-level = 3
debug = false

[dev-dependencies]
mockall = "0.11.4"
rstest = "0.17.0"
lazy_static = "1.4.0"

[workspace]
exclude = ["example"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

