[package]
name = "iana-example"
version = "0.1.0"
build = "build.rs"
publish = false

[dependencies]

[package.metadata.deb]
maintainer = "iana systems cargotodebian developers <cargotodebian@example.invalid>"
copyright = "2023 IANA SYSTEMS DEVELOPERS."
license-file = ["LICENSE", "2"]
extended-description = "IANA SYSTEMS example project for cargotodebian"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/example", "usr/bin/", "755"],
    # assets
    ["assets/*", "var/lib/example", "644"],
    ["target/release/assets/*", "var/lib/example", "644"],
    ["3.txt", "var/lib/example/3.txt", "644"],
]
changelog = "changelog"
default-features = false
features = ["example_debian_build"]

[package.metadata.deb.variants.debug]
assets =  [
    # binary
    ["target/release/example", "usr/bin/", "755"],
    # assets
    ["assets/*", "var/lib/example", "644"],
    ["target/release/assets/*", "var/lib/example", "644"],
    ["4.txt", "var/lib/example/4.txt", "644"],
]

[features]
default = ["example_non_debian_build"]
example_non_debian_build = []
example_debian_build = []

